# complinkage

./: implementation.md  pyproject.toml
notebooks/: deepseek-Copy1.ipynb  deepseek.ipynb  gemini.ipynb  promptforcreation.md
notebooks/.ipynb_checkpoints/: cgpt-checkpoint.ipynb  deepseek-checkpoint.ipynb  gemini-checkpoint.ipynb
notebooks/linkage_topology_optimizer_bundle/: README_linkage_optimizer.md  linkage_requirements.txt  linkage_topology_optimization_jupyter.ipynb  linkage_topology_optimizer.py  my_motion_data.json  real_world_linkage_runner.py  real_world_linkage_workflow.ipynb
notebooks/linkage_topology_optimizer_bundle/.ipynb_checkpoints/: easywayinput-checkpoint.md  linkage_topology_optimization_jupyter-checkpoint.ipynb  real_world_linkage_workflow-checkpoint.ipynb
notebooks/linkage_topology_optimizer_bundle/linkage_output/: linkage_design.json  organic_link.stl
notebooks/linkage_topology_optimizer_bundle/my_linkage_output/: crank_rocker_25.0_55.0_62.5_design.json  crank_rocker_25.0_55.0_62.5_link.stl
