[project]
name = "complinkage"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cma>=4.4.4",
    "ipympl>=0.10.0",
    "ipython>=9.15.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.1",
    "jupyterlab-widgets>=3.0.16",
    "mapbox-earcut>=2.0.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.1",
    "scipy>=1.18.0",
    "shapely>=2.1.2",
    "trimesh>=4.12.2",
]
